<resources>
    <string name="app_name">Aniforum</string>
    <string name="title_home">Aniforum</string>
    <string name="title_topics">Topics</string>
    <string name="title_user">User</string>
    <string name="button_view">View</string>
    <string name="button_share">Share</string>
    <string name="basic_image_description">An image description</string>

    <string name="not_logged">You haven\'t logged in, do it to comment and post</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="title_activity_view_post">ViewPostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>