<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#F4F4F4"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/post_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/post_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_margin"
                        android:layout_marginEnd="@dimen/text_margin"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:visibility="visible"
                        tools:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/basic_image_description"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/post_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/post_view_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="@string/button_view" />

                <Button
                    android:id="@+id/post_share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue_500"
                    android:text="@string/button_share"
                    app:icon="@drawable/share_white" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>